// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"Incorrect

export const value = 'Hello, world!';
export {};
~~~~~~~~~~ Empty export does nothing and can be removed.
"
`;

exports[` 2`] = `
"Incorrect

import 'some-other-module';
export {};
~~~~~~~~~~ Empty export does nothing and can be removed.
"
`;

exports[` 3`] = `
"Correct

export const value = 'Hello, world!';
"
`;

exports[` 4`] = `
"Correct

import 'some-other-module';
"
`;
